Task: Added hover style, glyph placeholder

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			<div class="uploader">
 			 	<input type="file" name="files[]" id="uploader-input" class="uploader-input" data-uploader-multiple-name="{files} files selected" multiple/>
 			 	<label for="uploader-input" class="uploader-label">
-			 		<span class="uploader-glyph">
-						X
-					</span>
+			 		<span class="uploader-glyph-placeholder">
+			 		 	<span class="uploader-glyph">X</span>
+			 		</span>
 			 		<span class="uploader-label-name">Select a file</span>
 			 	</label>
 			 </div>
